# os_yonsei

./: .gitignore  CMakeLists.txt  Makefile  common.hpp  core.cpp  core.hpp  init  kernel  kernel.cpp  kernel.hpp  main  main.cpp  program1  program2  program3  project2  project3  result  test.sh
core.dSYM/Contents/Resources/DWARF/: core
deprec/: CMakeLists.txt
kernel.dSYM/Contents/: Info.plist
kernel.dSYM/Contents/Resources/DWARF/: kernel
main.dSYM/Contents/Resources/DWARF/: main
project3.dSYM/Contents/Resources/DWARF/: project3
test/T2/: result
test/jmtest/input1/: init  program1  result
test/jmtest/input2/: init  p1
test/jmtest/input3/: p1  result
test/jmtest/input4/: init  p1
test/jmtest/results/: result2  result4
test/test1/: fifo_gt  lfu_gt  mfu_gt
test/test2/: fifo_gt  init  lru_gt  mfu_gt  program1
test/test3/: fifo_gt  init  lfu_gt  lru_gt  mfu_gt  program1  program2  program3
test/test_forkn_wait/: init  program2  result
test/test_hierachialfork/: init  program1  program2  program3
test/test_sleep1/: init  program1
test/test_sleep3/: init
test/test_sleepnew/: init  program1  program2
testOut/: lfu  lru  mfu
